# bubu_agent

./: .gitignore  DEPLOYMENT.md  Dockerfile  Makefile  README.md  app.py  bubu_cli.py  compose.py  config.py  config.yaml  debug_song_integration.py  demo_song_recommendation.py  interactive_sender.py  local_qwen_test.py  pyproject.toml  requirements.txt  scheduler.py  setup.bat  setup.sh  storage.py  utils.py
.github/workflows/: deploy.yml  test.yml
data/: bollywood_songs.csv  bollywood_songs.index  bollywood_songs_embeddings.npy
demo/: interactive_sender.py
providers/: __init__.py  huggingface_llm.py  local_transformers_llm.py  messenger.py  meta_whatsapp.py  twilio_whatsapp.py  ultramsg_whatsapp.py
readme/: CLI_README.md  DEPLOYMENT.md  FREE_WHATSAPP_APIS.md  GPT_OSS_MODEL_INFO.md  INTERACTIVE_README.md  SONG_RECOMMENDATION.md  ULTRAMSG_SETUP_GUIDE.md
recommenders/: __init__.py  hf_bollywood.py
scripts/: expand_song_catalog.py  generate_embeddings.py
setup/: .dockerignore  Dockerfile  README.md  __init__.py  app.py  docker-compose.yml  env.example  env.meta.example  generate_token.py  run_cli.sh  setup.bat  setup.sh  setup_hf_api.py  switch_to_meta.py  switch_to_ultramsg.py
tests/: README.md  __init__.py  conftest.py  debug_ai_generation.py  find_best_model.py  local_gpt_oss_test.py  test_compose.py  test_gpt_oss.py  test_integration.py  test_lightweight_llm.py  test_message_composer.py  test_provider_stub.py  test_scheduler.py  test_song_integration.py  test_song_recommendation.py
utils/: README.md  __init__.py  adaptive_config.py  compose.py  compose_refactored.py  config.py  config_facade.py  llm_factory.py  scheduler.py  storage.py  storage_protocol.py  types.py
